<resources>
    <string name="app_name">玩安卓</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="bnv_title_home">主页</string>
    <string name="bnv_title_project">项目</string>
    <string name="bnv_title_ks">体系</string>
    <string name="bnv_title_mine">我的</string>

    <string name="nv_share">我的分享</string>
    <string name="nv_collect">我的收藏</string>
    <string name="nv_integral">我的积分</string>
    <string name="nv_history">阅读历史</string>
    <string name="nv_rank">积分排行榜</string>
    <string name="nv_setting">系统设置</string>
    <string name="nv_about">关于</string>
    <string name="nv_login">登录</string>

    <string name="nv_head_level">等级: %1$s</string>
    <string name="nv_head_rank">排名: %1$s</string>
    <string name="nv_head_please_login">请登录</string>

    <string name="common_open">开启</string>
    <string name="common_close">关闭</string>
    <string name="common_collect">收藏</string>
    <string name="common_search">搜索</string>

    <string name="common_collect_success">已收藏</string>
    <string name="common_collect_cancel">已取消收藏</string>

    <string name="common_retry">点击重试</string>
    <string name="common_retry_login">请重新登录</string>
    <string name="upgrade_now">立即更新</string>
    <string name="upgrade_new_version">发现新版本</string>
    <string name="upgrade_version">版本更新</string>
    <string name="upgrade_auto_download">是否Wifi下自动更新</string>
    <string name="account_logout">退出登录</string>
    <string name="account_please_login">请先登录</string>
    <string name="account_force_login">是否强制登录</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
